<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/one" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_off"
            android:icon="@drawable/ic_tag"
            android:title="@string/nav_off" />
        <item
            android:id="@+id/nav_new_list"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/nav_new_list" />
        <item
            android:id="@+id/nav_my_buy"
            android:icon="@drawable/ic_clipboard"
            android:title="@string/nav_my_buy" />
        <item
            android:id="@+id/nav_my_nfe"
            android:icon="@drawable/ic_bill"
            android:title="@string/nav_my_nfe" />
        <item
            android:id="@+id/nav_send_nfe"
            android:icon="@drawable/ic_keyboard_nfe"
            android:title="@string/nav_send_nfe" />
        <item
            android:id="@+id/nav_alertas"
            android:icon="@drawable/ic_alarm"
            android:title="Configurar Alertas" />
        <item
            android:id="@+id/nav_financas"
            android:icon="@drawable/ic_debit_card"
            android:title="Finanças" />
    </group>

    <group android:id="@+id/two">
        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_info"
            android:title="Sobre" />
    </group>

    <group android:id="@+id/three">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_logout" />
    </group>

</menu>
