<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nav_color"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:context=".RegisterActivity">

    <FrameLayout
        android:id="@+id/bar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#77000000"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:titleTextColor="@color/text_color"
            android:background="@drawable/gradient_bg"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/bar_container"
        android:background="@drawable/gradient_list" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bar_container">

        <LinearLayout
            android:id="@+id/btnsLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/inputName"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:background="@drawable/button_edttext"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/edt_hint_name"
                android:textColorHint="@color/nav_color"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="16dp"
                android:textColor="#000"
                android:layout_marginBottom="10dp" />


            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:background="@drawable/button_edttext"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/edt_hint_email"
                android:textColorHint="@color/nav_color"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="16dp"
                android:textColor="#000"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/edtPass"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:background="@drawable/button_edttext"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/edt_hint_pass"
                android:textColorHint="@color/nav_color"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="16dp"
                android:textColor="#000"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/buttonChoose"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:background="@drawable/buttons_login"
                    android:drawableLeft="@drawable/ic_camera"
                    android:drawableTint="@color/nav_color"
                    android:drawablePadding="5dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="15dp"
                    android:text="@string/btn_search_image"
                    android:textColor="@color/nav_color"/>

                <TextView
                    android:id="@+id/editTextName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:hint="@string/txt_image_name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRegisterUser"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/btn_register"
                    android:onClick="btnRegisterUser"
                    android:textColor="@color/text_color"
                    android:background="@drawable/buttons_login"
                    android:drawableLeft="@drawable/ic_apply"/>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:elevation="15dp"
            app:srcCompat="@drawable/deepprices_green"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:adjustViewBounds="?attr/isLightTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>


</RelativeLayout>
