<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nav_color"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:context=".Editar_Cadastros">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/btnsLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/inputName"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:background="@drawable/button_edttext"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/edt_hint_name"
                android:textColorHint="@color/nav_color"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="16dp"
                android:textColor="#000"
                android:layout_marginBottom="10dp" />


            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:background="@drawable/button_edttext"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/edt_hint_email"
                android:textColorHint="@color/nav_color"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="16dp"
                android:textColor="#000"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/edtPass"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:background="@drawable/button_edttext"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/edt_hint_pass"
                android:textColorHint="@color/nav_color"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="16dp"
                android:textColor="#000"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/edtCPF"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:background="@drawable/button_edttext"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="CPF"
                android:textColorHint="@color/nav_color"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="16dp"
                android:textColor="#000"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:background="#33000000"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/btnChoose"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttons_login"
                    android:drawableLeft="@drawable/ic_search_upload"
                    android:paddingStart="12dp"
                    android:paddingEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/btn_search_image"
                    android:textColor="@color/nav_color"/>

                <ImageView
                    android:id="@+id/imgUpload"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:elevation="15dp"
                    app:srcCompat="@drawable/contact"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRegisterUser"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/btn_change"
                    android:onClick="btnEditRegisterUser"
                    android:textColor="@color/text_color"
                    android:background="@drawable/buttonshape"
                    android:drawableLeft="@drawable/ic_apply"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>


</RelativeLayout>
