<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nav_color"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:context=".BuyListActivity">

    <View
        android:id="@+id/viewBar"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/gradient_list"/>

    <EditText
        android:id="@+id/editNomeLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:hint="@string/edt_list_name"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toTopOf="@+id/txtSearch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/txtNomeLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/txt_list_name"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toTopOf="@+id/txtSearch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/txtSearch"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="96dp"
        android:background="#99000000"
        android:drawableLeft="@drawable/ic_shopping"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/edt_search_product"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_nav_login"
        android:textSize="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/layoutProdutos"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSearch"/>


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginBottom="50dp"
        android:elevation="15dp"
        android:visibility="visible"
        app:srcCompat="@drawable/deepprices_w"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:adjustViewBounds="?attr/isLightTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />



</android.support.constraint.ConstraintLayout>